@@ -12381,6 +12381,7 @@ SCIP_RETCODE SCIPlpSolveAndEval(
             {
                SCIP_Real tmpcutoff;
                SCIP_LPSOLSTAT solstat;
+               int tmpitlim;
                char tmppricingchar;
 
                SCIPdebugMessage("objval = %f < %f = lp->lpiuobjlim, but status objlimit\n", objval, lp->lpiuobjlim);
@@ -12397,10 +12398,13 @@ SCIP_RETCODE SCIPlpSolveAndEval(
                SCIP_CALL( SCIPsetSetCharParam(set, "lp/pricing", 's') );
 
                /* resolve LP with an iteration limit of 1 */
+               tmpitlim = lp->lpiitlim;
+               SCIP_CALL( lpSetIterationLimit(lp, 1) );
                SCIP_CALL( lpSolve(lp, set, stat,  SCIP_LPALGO_DUALSIMPLEX, 1, -1, FALSE, FALSE, TRUE, fastmip, tightfeastol, fromscratch, keepsol, lperror) );
 
-               /* reinstall old cutoff bound and lp pricing strategy */
+               /* reinstall old cutoff bound, iteration limit, and lp pricing strategy */
                lp->cutoffbound = tmpcutoff;
+               SCIP_CALL( lpSetIterationLimit(lp, tmpitlim) );
                SCIP_CALL( SCIPsetSetCharParam(set, "lp/pricing", tmppricingchar) );
 
                /* get objective value */
